--- a/css.css
+++ b/css.css
@@ -52,9 +52,46 @@
     width: 7%;
     position: absolute;
     top: 20px;
-    right: 13%;
+    right: 30vw;
 
 }
+.nav_bar .nav_links .dropmenu
+{
+    position: relative;
+    display: inline-block;
+}
+.nav_bar .nav_links .dropmenu .content
+{
+    position: absolute;
+    background-color: rgba(3, 3, 3, 0.692);
+    box-shadow: 0px 8px 16px 0px rgb(0, 0, 0, 0.2);
+    z-index: -1;
+    opacity: 0;
+    border-radius:8px ;
+    transition: 0.3s;
+}
+.nav_bar .nav_links .dropmenu .content a
+{
+    display: block;
+    color:white;
+    padding: 12px 24px;
+    text-decoration: none;
+    border-radius: 8px;
+    transition: 0.3s;
+    font-size: 18px;
+    margin-bottom: 3px;
+}
+.nav_bar .nav_links .dropmenu .content a:hover
+{
+    background-color: rgb(164,78,82);
+}
+.nav_bar .nav_links .dropmenu:hover .content
+{
+    opacity: 1;
+    z-index: 1;
+}
+
+
 .hero
 {
     width: 55%;
@@ -324,7 +361,21 @@
     {
         display: block;
     }
-
+    .nav_bar .nav_links .dropmenu .content
+    {
+        position: absolute;
+        box-shadow: 0px 8px 16px 0px rgb(0, 0, 0, 0.3);
+        color: black;
+        background-color: transparent;
+        z-index: -1;
+        opacity: 0;
+        border-radius:8px ;
+        transition: 0.3s;
+    }
+    .nav_bar .nav_links .dropmenu .content a
+    {
+        color: black;
+    }
     .nav_links{
         position: absolute;
         background-color: rgba(255, 255, 255, 0.20);
