--- a/css.css
+++ b/css.css
@@ -62,8 +62,9 @@
 }
 .nav_bar .nav_links .dropmenu .content
 {
+    cursor: pointer;
     position: absolute;
-    background-color: rgba(3, 3, 3, 0.767);
+    background-color: #333333d3;
     box-shadow: 0px 8px 16px 0px rgb(0, 0, 0, 0.2);
     z-index: -1;
     opacity: 0;
@@ -311,6 +312,7 @@
 {
     justify-content: center;
     text-align: center;
+    align-items: center;
     background-color: rgb(164,78,82);
 
 }
@@ -350,18 +352,22 @@
 {
     font-size: 1.9em;
     font-weight: 400;
-    margin-bottom: 1%;
     color: white;
-    padding-bottom: 3%;
+    padding-bottom: 4%;
+    width: 80%;
+    margin-left: 10%;
+    padding-top: 20px;
 }
 .projet 
 {
     text-align: center;
     justify-content: center;
+    background-color: #f6f6f6;
+    padding-bottom: 2%;
 }
 .projet h3
 {
-    margin-top: 3%;
+    padding-top: 3%;
     color: rgb(185, 74, 80);
     font-size: 4em;
     font-weight: 780;
@@ -370,80 +376,96 @@
 .projet .grid
 {
     display: grid;
-    margin: 2%;
-    grid-template-areas: "a a a a";
-    grid-gap: 1vw;
-    grid-auto-columns: auto;
+    /*grid-template-areas: "a a a a";*/
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    margin: 3%;
+    justify-content: center;
+
 
 }
 .projet .grid .item
 {
-    margin: 2%;
-    background-color: rgb(219, 219, 214);
-    border: 2px solid black;
-    border-radius: 5px;
-    padding: 2%;
-    box-shadow: 2px 2px 0px black;
+    cursor: pointer;
+    background-color: #fff;
+    border-radius: 3%;
+    padding: 10%;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 30px 13px 3px, rgba(0, 0, 0, 0.2) 4.5px -4px 0px inset;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    text-align: center;
 }
 .projet .grid .item:hover
 {
-    transition: all 0.4s linear;
+    transition: all 0.3s linear;
     background-color: rgb(164,78,82); 
     color: white;
-    box-shadow: 7px 4px 2px black;
+    box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 15px 16px 0px;
 }
-.grid .item .img_item
+.projet .grid .item .img_item
 {
     padding: 1%;
     margin: 2%;
 }
-.grid .item .img_item img
+.projet .grid .item .img_item img
 {
     width: 8vw;
     height: auto;
     border-radius: 4px;
 }
-.grid .item .sous_item
+.projet .grid .item .sous_item
 {
     padding: 1%;
     margin: 2%;
 }
-.grid .item .sous_item h1
+.projet .grid .item .sous_item h1
 {
-    font-size: 2.2em;
+    font-size: 2.4em;
     font-weight: 725;
     text-shadow: 1px 1px 0px rgb(0, 0, 0) ;
-    padding-bottom: 2%;
+    padding-top: 4%;
+   
 }
-.grid .item .sous_item span
+.projet .grid .item .sous_item p
 {
-    font-size: 1.3em;
+    color: #333333;
+    font-size: 1.4em;
     font-weight: 500;
-    padding:2%;
+    padding-top:6%;
 }
-.grid .item  a
+.projet .grid .item:hover .sous_item p
 {
-    background-color: rgba(158, 157, 157, 0.849);
-    text-decoration: none;
-    font-size:1.5em;
-    border-radius:2px  ;
-    box-shadow: 1px 2px 2px black;
-    padding: 1.3% 15%;
-    color: black;
+    color: #f9fbfc;
+    transition: all 0.3s ease-in-out;
 }
-.grid .item  a:hover
+
+
+
+.scroll_top_button
 {
-    background-color: rgb(187, 187, 187);
-    text-decoration: none;
-    font-size:1.5em;
-    border-radius:5px  ;
-    box-shadow: 8px 4px 4px black;
-    transition: all 0.3s linear;
-    color: rgb(240, 240, 240);
+    position: fixed;
+    right: 20px;
+    bottom: 36px;
+    display: grid;
+    place-items: center;
+    width: 4vw;
+    height: 4vw;
+    border:0;
+    border-radius: 50%;
+    background:rgb(185, 74, 80);
+    color: #f9f9f9;
+    cursor: pointer;
+    opacity: 0;
+    visibility: hidden;
+    transition:0.3s;
 }
-
-
-
+.scroll_top_button.visible
+{
+    opacity: 1;
+    visibility: visible;
+}
 @media screen and (max-width: 900px) { 
 
    .nav_bar .menu_hamberger
@@ -508,6 +530,15 @@
         font-weight: bolder;
         margin-bottom: 10px;
     } 
+    .experience h1
+    {
+        font-size: 2.5em;
+        font-weight: 700;
+    }
+    .projet .grid
+    {
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
 
 @media screen and (max-width: 1550px) {
@@ -572,6 +603,10 @@
         margin-top: 6%; 
         position: relative;
     }
+    .projet .grid
+    {
+        grid-template-columns: repeat(1, 1fr);
     }
+}
 
 
