--- a/css.css
+++ b/css.css
@@ -6,6 +6,9 @@
     list-style: none;
     font-family: 'Poppins', sans-serif;
 }
+
+/*NAV_BAR*/
+
 .nav_bar
 {
     width: 100%;
@@ -23,7 +26,7 @@
 {
     color: white;
     text-decoration: none;
-    font-size: 20px;
+    font-size: 18.5px;
     font-weight: 600;
 }
 
@@ -52,7 +55,7 @@
     width: 7%;
     position: absolute;
     top: 20px;
-    right: 5px;
+    right: 10px;
 
 }
 .nav_bar .nav_links .dropmenu
@@ -92,10 +95,11 @@
     z-index: 1;
 }
 
+/*HERO*/
 
 .hero
 {
-    width: 55%;
+    width: 35%;
     height: 40%;
     display: flex;
     justify-content: center;
@@ -120,17 +124,16 @@
 {
     text-align: center;
     display: flex;
-    font-size: 1.5em;
+    font-size: 1.8em;
     font-weight: 400;
     
+    
 }
-
-
-.hero span
+.hero .txt-rotate
 {
-    margin-left: 3px;
+    margin-left: 6px;
     display: flex;
-    font-weight: 900;
+    font-weight: 600;
     text-shadow: 50px;
     text-align: center;
 }
@@ -154,6 +157,9 @@
     height: 100%;
 
 }
+
+/*A_PROPOS*/
+
 .a_propos
 {
     background-color: rgb(164,78,82);
@@ -188,8 +194,6 @@
     width: 75%;
     height: 100%;
 }
-
-
 .a_propos .text_moi h1
 {
     color: rgb(164,78,82);
@@ -231,6 +235,9 @@
     color: white;
     box-shadow: 2px 2px 0px black;
 }
+
+/*EXPERIENCE*/
+
 .experience
 {
     justify-content: center;
@@ -253,7 +260,7 @@
 }
 .experience .date
 {
-    font-size: 1.75em;
+    font-size: 2.3em;
 }
 .experience .date i
 {
@@ -263,43 +270,44 @@
 {
     padding: 1%;
     font-weight: 700;
-    font-size: 2.5em;
+    font-size: 3em;
 }
 .experience .stage2 h2
 {
     color: rgb(164,78,82);
     padding: 1%;
     font-weight: 700;
-    font-size: 2.5em;
+    font-size: 3em;
 }
 .experience .texte
 {
-    font-size: 1.9em;
+    font-size: 2.2em;
     font-weight: 400;
     margin-bottom: 1%;
+    padding: 1%;
 }
 .experience .description
 {
-    width: 40%;
+    width: 80%;
     justify-content: center;
     align-items: center; 
     text-align: center;
     justify-items: center;
-    margin-left: 25%;
-
+    margin-left: 10%;
+    padding-right:1%;
 }
 .experience .stage1 .description p
 {
     text-align:start;
     margin-left: 40%;
-    font-size: 1.5em;
+    font-size: 1.8em;
     margin-top: 3%;
 }
 .experience .stage2 .description p
 {
     text-align:start;
     margin-left: 40%;
-    font-size: 1.5em;
+    font-size: 1.8em;
     margin-top: 3%;
 }
 .experience .description p i
@@ -308,6 +316,9 @@
     font-size: 0.5em;
     margin-right: 1.5%;
 }
+
+/*FORMATION*/
+
 .formation
 {
     justify-content: center;
@@ -321,7 +332,7 @@
     padding-top: 6%;
     padding-bottom: 3%;
     margin-top: 3%;
-    font-size: 4em;
+    font-size: 3em;
     font-weight: 780;
 }
 .formation .sacs img
@@ -345,12 +356,12 @@
 {
     padding: 1%;
     font-weight: 700;
-    font-size: 2.5em;
+    font-size: 2.3em;
     color: white;
 }
 .formation .texte
 {
-    font-size: 1.9em;
+    font-size: 1.7em;
     font-weight: 400;
     color: white;
     padding-bottom: 4%;
@@ -358,6 +369,9 @@
     margin-left: 10%;
     padding-top: 20px;
 }
+
+/*PROJET*/
+
 .projet 
 {
     text-align: center;
@@ -367,7 +381,7 @@
 }
 .projet h3
 {
-    padding-top: 3%;
+    padding-top: 6%;
     color: rgb(185, 74, 80);
     font-size: 4em;
     font-weight: 780;
@@ -400,7 +414,7 @@
 .projet .grid .item:hover
 {
     transition: all 0.3s linear;
-    background-color: rgb(164,78,82); 
+    background-color: rgba(164, 78, 82, 0.911); 
     color: white;
     box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 15px 16px 0px;
 }
@@ -486,6 +500,7 @@
     .nav_bar .nav_links .dropmenu .content a
     {
         color: black;
+        font-size: 17px;
     }
     .nav_links{
         position: absolute;
@@ -521,7 +536,54 @@
         color: black;
         font-weight: bold;
     }
-
+    .experience h1
+    {
+        font-size: 2em;
+    }
+    .experience .date
+    {
+        font-size: 0.8em;
+    }
+    .experience h2
+    {
+        font-size: 1.8em;
+    }
+    .experience .texte
+    {
+        font-size: 0.5em;
+    }
+    .experience .description p
+    {
+        font-size: 0.4em;
+    }
+    .experience .sacs img
+    {
+        width: 8%;
+    }
+    .formation h1
+    {
+        font-size: 2em;
+    }
+    .formation .date
+    {
+        font-size: 0.8em;
+    }
+    .formation h2
+    {
+        font-size: 2em;
+    }
+    .formation .texte
+    {
+        font-size: 0.5em;
+    }
+    .formation .description
+    {
+        font-size: 0.6em;
+    }
+    .formation .sacs img
+    {
+        width: 8%;
+    }
 }
 @media screen and (max-width: 680px) {
     .hero h1
@@ -530,14 +592,56 @@
         font-weight: bolder;
         margin-bottom: 10px;
     } 
-    .experience h1
-    {
-        font-size: 2.5em;
-        font-weight: 700;
-    }
     .projet .grid
     {
         grid-template-columns: repeat(2, 1fr);
+    }
+    .experience h1
+    {
+        font-size: 2em;
+        font-weight: 700;
+    }
+    .experience .date
+    {
+        font-size: 0.8em;
+    }
+    .experience h2
+    {
+        font-size: 1em;
+    }
+    .experience .texte
+    {
+        font-size: 0.8em;
+    }
+    .experience .description
+    {
+        font-size: 0.5em;
+    }
+    .formation h1
+    {
+        font-size: 2em;
+        font-weight: 700;
+    }
+    .formation .date
+    {
+        font-size: 0.8em;
+    }
+    .formation h2
+    {
+        font-size: 1em;
+    }
+    .formation .texte
+    {
+        font-size: 0.8em;
+    }
+    .formation .description
+    {
+        font-size: 0.5em;
+    }
+        .scroll_top_button
+    {
+        width: 10vw;
+        height: 10vw;
     }
 }
 
@@ -564,18 +668,64 @@
     }
     .a_propos .text_moi p
     {
-        font-size: 2.5em;
+        font-size: 2em;
 
         margin-bottom: 10px;
         padding-bottom: 3%;
     }
     .a_propos .text_moi span
     {
-        font-size: 2em;
+        font-size: 1.6em;
     }
     .a_propos .text_moi a
     {
         margin-top: 6%; 
+    }
+    .formation h1
+    {
+        font-size: 3em;
+        font-weight: 700;
+    }
+    .formation .date
+    {
+        font-size: 1.8em;
+    }
+    .formation h2
+    {
+        font-size: 3em;
+    }
+    .formation .texte
+    {
+        font-size: 2em;
+    }
+    .formation .description
+    {
+        font-size: 1em;
+    }
+    .experience h1
+    {
+        font-size: 3em;
+        font-weight: 700;
+    }
+    .experience .date
+    {
+        font-size: 1.8em;
+    }
+    .experience h2
+    {
+        font-size: 3em;
+    }
+    .experience .texte
+    {
+        font-size: 2em;
+    }
+    .experience .description
+    {
+        font-size: 1em;
+    }
+        .nav_bar  a
+    {
+        font-size: 17px;
     }
     
 }
@@ -606,6 +756,62 @@
     .projet .grid
     {
         grid-template-columns: repeat(1, 1fr);
+    }
+    .experience h1
+    {
+        font-size: 2.3em;
+        font-weight: 700;
+    }
+    .experience .date
+    {
+        font-size: 1.2em;
+    }
+    .experience h2
+    {
+        font-size: 0.5em;
+    }
+    .experience .texte
+    {
+        font-size: 1em;
+    }
+    .experience .description
+    {
+        font-size: 0.6em;
+    }
+    .formation h1
+    {
+        font-size: 2.3em;
+        font-weight: 700;
+    }
+    .formation .date
+    {
+        font-size: 1.2em;
+    }
+    .formation h2
+    {
+        font-size: 0.5em;
+    }
+    .formation .texte
+    {
+        font-size: 1em;
+    }
+    .formation .description
+    {
+        font-size: 0.6em;
+    }
+}
+@media screen and (max-width: 300px) {
+    .experience h1
+    {
+        font-size: 1.8em;
+    }
+    .experience .texte
+    {
+        font-size: 1.1em;
+    }
+    .experience .description
+    {
+        font-size: 0.5em;
     }
 }
 
