--- a/css.css
+++ b/css.css
@@ -145,7 +145,7 @@
 {
     top: 0;
     left: 0;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background-color: black;
     background-image: radial-gradient(circle at top right, rgba(121, 68, 154, 0.13), transparent),
@@ -153,7 +153,7 @@
 }
 .le_dessin
 {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
 
 }
