--- a/css.css
+++ b/css.css
@@ -5,6 +5,7 @@
     text-decoration: none;
     list-style: none;
     font-family: 'Poppins', sans-serif;
+    box-sizing: border-box;
 }
 
 /*NAV_BAR*/
@@ -511,79 +512,222 @@
 
 /*CONTACTER*/
 
-.contact iframe
-{
-    padding-top: 5%;
-    background-color: #f6f6f6;
-    position: absolute;
-}
-.contact .contact_block
-{
-    position: absolute;
-    background-color: #ffffff;
-    width: 25%;
-    margin-top: 7%;
-    right: 4%;
-    padding-bottom: 1%;
-    display: inline-block;
-    border-radius: 20px;
-    box-shadow: 4px 4px 0px #ccc;
-}
-.contact .contact_block h1
-{
-    font-size: 3em;
-    font-weight: 700;
-    color: rgb(0, 0, 0);
-    padding-top: 4%;
-    padding-left: 5%;
-    padding-bottom: 3%;
-    
-}
-.contact .contact_block form
-{
-    padding: 2%;
-    justify-content: center;
+
+.social-media-list {
+    position: relative;
+    font-size: 22px;
     text-align: center;
-    align-items: center;
-    place-items: center;
-    display: grid;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0;
+  }
+  
+  .social-media-list li a {
+    color: #fff;
+  }
+  
+  .social-media-list li {
+    position: relative; 
+    display: inline-block;
+    height: 60px;
+    width: 60px;
+    margin: 10px 3px;
+    line-height: 60px;
+    border-radius: 50%;
+    color: #fff;
+    cursor: pointer; 
+    transition: all .2s ease-in-out;
+    background-color: #000000c2;
+  }
+  
+  .social-media-list li:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 60px;
+    height: 60px;
+    line-height: 60px;
+    border-radius: 50%;
+    opacity: 0;
+    box-shadow: 0 0 0 1px #fff;
+    transition: all .2s ease-in-out;
+  }
+  
+  .social-media-list li:hover {
+    background-color: #fff; 
+  }
+  
+  .social-media-list li:hover:after {
+    opacity: 1;  
+    transform: scale(1.12);
+    transition-timing-function: cubic-bezier(0.37,0.74,0.15,1.65);
+  }
+  
+  .social-media-list li:hover a {
+    color: #000;
+  }
+  hr {
+    border-color: rgba(255,255,255,.6);
     
-}
-.contact .contact_block form input,textarea
-{
-    display: grid;
-    padding: 2%;
-    border: transparent;
-    border-bottom: 2px solid #ccc;
-    width: 80%;
-    font-size: 1.2em;
-    border-radius: 10px ;
-    box-shadow: #ccc 0px 1px 1px, #ccc 0px 1px 1px 2px, #ccc 1px -1px 0px inset;
-    resize: none;
-}
-.contact .contact_block form label
-{
-    padding-top: 3%;
-    padding-bottom: 3%;
-    margin-right: 65%;
-    font-size: 1.2em;
-}
-.contact .contact_block form button
-{
-    padding: 3% 20%;
-    font-size: 1.5em;
+  }
+
+
+
+#contact {
+    background-color: #f6f6f6;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .contact-boite {
+    width: clamp(100px, 90%, 1000px);
+    margin: 80px 50px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  
+  .contact-liens, .contact-form-bas {
+    width: 50%;
+    padding: 8% 5% 10% 5%;
+    border-radius: 0px 10px 10px 0px;
+  }
+  .contact-boite .contact-form-bas {
+    background-color: #cccccccc;
+    
+  }
+  .contact-boite .contact-liens
+  {
+    background-color: rgb(185, 74, 80);
+    border-radius: 10px 0px 0px 10px;
+    justify-content: center;
+  }
+  
+  @media only screen and (max-width: 800px) {
+    .contact-liens, .contact-form-bas {
+      width: 100%;
+    }
+    .social-media-list li {
+        height: 60px;
+        width: 60px;
+        line-height: 60px;
+      }
+      .social-media-list li:after {
+        width: 60px;
+        height: 60px;
+        line-height: 60px;
+      }
+      .contact-boite .contact-liens h2 {
+        font-size: clamp(40px, 10vw, 60px);
+      }
+    .contact-form-bas 
+    {
+        border-radius: 0px 0px 10px 10px;
+    }
+    .contact-boite .contact-liens
+    {
+        border-radius: 10px 10px 0px 0px;
+    }
+  }
+  
+  @media only screen and (max-width: 400px) {
+    .contact-boite {
+      width: 95%;
+      margin: 8% 5%;
+    }
+    .social-media-list {
+        left: 0;
+      }
+      .social-media-list li {
+        height: 55px;
+        width: 55px;
+        line-height: 55px;
+        font-size: 2rem;
+      }
+      .social-media-list li:after {
+        width: 55px;
+        height: 55px;
+        line-height: 55px;
+      }
+      .contact-boite .contact-liens h2 {
+        font-size: clamp(30px, 12vw, 60px);
+      }
+  }
+  
+  .contact-boite .contact-liens h2 {
+    font-family: 'Arimo', sans-serif;
+    color: #fff;
+    font-size: 3em;
+    letter-spacing: 2px;
+    text-align: center;
+    transform: scale(.95, 1);
+    padding-bottom: 5%;
+  }
+  
+  .form-item {
+    position: relative;
+  }
+  
+  label, input, textarea {
+    font-family: 'Poppins', sans-serif;
+  }
+  
+  label {
+    position: absolute;
+    top: 10px;
+    left: 2%;
+    color: #999;
+    font-size: clamp(14px, 1.5vw, 18px);
+    pointer-events: none;
+    user-select: none;
+  }
+  
+  input, textarea {
+    width: 100%;
+    outline: 0;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    margin-bottom: 20px;
+    padding: 12px;
+    font-size: clamp(15px, 1.5vw, 18px);
+  }
+  
+  input:focus+label, 
+  input:valid+label, 
+  textarea:focus+label, 
+  textarea:valid+label {
+    font-size: clamp(13px, 1.3vw, 16px);
+    color: #777;
+    top: -20px;
+    transition: all .225s ease;
+  }
+  
+  .submit-btn {
+    background-color: #fd917e;
+    filter: drop-shadow(2px 2px 3px #0003);
+    color: #fff;
+    font-family: "Poppins",sans-serif;
+    font-size: clamp(16px, 1.6vw, 18px);
+    display: block;
+    padding: 12px 20px;
+    margin: 2px auto;
     border: none;
-    border-radius: 15px;
-    background-color: rgba(185, 74, 79, 0.836); 
-    margin-top: 10%;
-}
-.contact .contact_block form button:hover
-{
-    background-color: rgb(185, 74, 79); 
-    transition: all 0.3s ease-in-out;
-    box-shadow: 1px 1px 1px rgb(185, 74, 79);
+    border-radius: 4px;
     cursor: pointer;
-}
+    user-select: none;
+    transition: 0.2s;
+  }
+  
+  .submit-btn:hover {
+    transform: scale(1.1, 1.1);
+  }
+  
+  .submit-btn:active {
+    transform: scale(1.1, 1.1);
+    filter: sepia(0.5);
+  }
 
 
 
