--- a/css.css
+++ b/css.css
@@ -4,9 +4,10 @@
     margin: 0;
     text-decoration: none;
     list-style: none;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Lato';
     box-sizing: border-box;
 }
+
 
 /*NAV_BAR*/
 
@@ -22,6 +23,8 @@
     box-sizing: border-box;
     align-items: center;
     z-index: 20;
+    animation-duration: 1.1s;
+    animation-name: smooth;
 }
 .nav_bar  a
 {
@@ -42,8 +45,6 @@
 .nav_bar .nav_links ul li.active a
 {
     color: rgb(164,78,82);
-
-
 } 
 .nav_bar .nav_links ul li a:hover
 {
@@ -74,6 +75,8 @@
     opacity: 0;
     border-radius:8px ;
     transition: 0.3s;
+    margin-top: 35%;
+    right: 1%;
 }
 .nav_bar .nav_links .dropmenu .content a
 {
@@ -98,6 +101,7 @@
 
 /*HERO*/
 
+
 .hero
 {
     width: auto;
@@ -107,28 +111,41 @@
     align-items: center;
     flex-direction: column;
     position: absolute;
+    overflow: hidden;
     color: rgb(255, 255, 255);
     top: 50%;
     left: 50%;
     transform: translate(-50%,-40%);
+    animation-duration: 2s;
+    animation-name: slidein;
     background-color: rgba(0, 0, 0, 0);
 }
 
 .hero h1
 {
+    overflow: hidden;
     font-size: 3em;
     font-weight: bolder;
     margin-top: 10px;
     text-align: center;
 }
-.hero p
+.hero h1::after
+{   
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    animation-delay: 0.8s;
+    animation-duration: 3.5s;
+    animation-name: slidein-text;
+}
+
+.hero h2
 {
     text-align: center;
     display: flex;
     font-size: 1.8em;
-    font-weight: 400;
-    
-    
+    font-weight: 400; 
 }
 .hero .txt-rotate
 {
@@ -204,7 +221,7 @@
     margin-bottom: 20px;
     padding-bottom: 6%;
 }
-.a_propos .text_moi p
+.a_propos .text_moi h2
 {
     font-size: 2.8em;
     font-weight: 400;
@@ -827,7 +844,7 @@
         margin-bottom: 10px;
         padding-bottom: 3%;
     }
-    .a_propos .text_moi p
+    .a_propos .text_moi h2
     {
         font-size: 1.8em;
         margin-bottom: 10px;
@@ -998,7 +1015,7 @@
         color: black;
         font-weight: bold;
     }
-    .banniere .hero p
+    .banniere .hero h2
     {
         font-size: 1.2em;
     }
@@ -1154,7 +1171,7 @@
         font-size: 1.2em;
         font-weight: bolder;
     } 
-    .hero p
+    .hero h2
     {
         font-size: 1.2em;
     }
@@ -1337,3 +1354,59 @@
         font-size: 0.8em;
     }
 }
+
+/*KEYFRAME*/
+
+@keyframes slidein 
+{
+    from 
+    {
+      margin-left: -20%;
+      opacity: 0;
+    }
+  
+    to 
+    {
+      margin-left: 0%;
+    }
+}
+@keyframes slidein-text 
+{
+    from 
+    {
+      margin-left: -300%;
+      opacity: 1;
+      background-color: rgb(164,78,82);
+    }
+  
+    to 
+    {
+      opacity: 0;
+    }
+}
+@keyframes smooth 
+{
+    from 
+    {
+      opacity: 0;
+    }
+  
+    to 
+    {
+        opacity: 1;
+    }
+}
+@keyframes smooth-bas 
+{
+    from 
+    {
+        margin-bottom: -10%;
+        opacity: 0;
+    }
+  
+    to
+    {
+        margin-bottom: 0%;
+    }
+}
+
