--- a/css.css
+++ b/css.css
@@ -6,8 +6,11 @@
     list-style: none;
     font-family: 'Lato';
     box-sizing: border-box;
+    
 }
-
+*::-webkit-scrollbar {
+    width: 0;
+  }
 
 /*NAV_BAR*/
 
@@ -289,7 +292,7 @@
 }
 .experience .sacs img
 {
-    width: 5%;
+    width: 11%;
     height: auto;
     padding: 3%;
 }
@@ -330,6 +333,7 @@
     justify-items: center;
     margin-left: 10%;
     padding-right:1%;
+    padding-bottom: 4%;
 }
 .experience .stage1 .description p
 {
@@ -352,7 +356,10 @@
     margin-right: 1.5%;
 }
 
+
 /*FORMATION*/
+
+
 
 .formation
 {
@@ -360,7 +367,24 @@
     text-align: center;
     align-items: center;
     background-color: rgb(164,78,82);
+    margin-top: 2%;
+    padding-left: 10%;
+   border-radius: .8% .8% 0% 0%;
+    padding-right: 10%;
+    padding-bottom: 1%;
 
+}
+.formation .encadrement
+{
+    background-color: #f6f6f6;
+    justify-content: center;
+    align-items: center;
+    justify-items: center;
+    margin: auto;
+    color: #000;
+    border-radius: 52px;
+    margin-bottom: 8%;
+    box-shadow: rgb(179, 180, 182) 5px 5px 30px 8px inset, rgba(179, 180, 182) -3px -4px 30px 2px inset;
 }
 .formation h1
 {
@@ -370,35 +394,35 @@
     font-size: 3em;
     font-weight: 780;
 }
-.formation .sacs img
+.formation .encadrement .sacs img
 {
-    width: 5%;
+    width: 12%;
     height: auto;
     padding: 3%;
-    
+
 }
 .formation .date
 {
     font-size: 1.75em;
-    color: white;
+
 }
 .formation .date i
 {
     margin-right: 1%;
-    color: white;
+
 }
 .formation .formation1 h2
 {
     padding: 1%;
     font-weight: 700;
     font-size: 2.3em;
-    color: white;
+    
 }
 .formation .texte
 {
     font-size: 1.7em;
     font-weight: 400;
-    color: white;
+
     padding-bottom: 4%;
     width: 80%;
     margin-left: 10%;
@@ -559,7 +583,7 @@
     height: 60px;
     width: 60px;
     margin: 10px 3px;
-    line-height: 60px;
+    line-height: 68px;
     border-radius: 50%;
     color: #fff;
     cursor: pointer; 
@@ -575,11 +599,11 @@
     left: 0;
     width: 60px;
     height: 60px;
-    line-height: 60px;
+    line-height: 68px;
     border-radius: 50%;
     opacity: 0;
     box-shadow: 0 0 0 1px #fff;
-    transition: all .2s ease-in-out;
+    transition: all 2s ease-in-out;
   }
   
   .social-media-list li:hover 
@@ -874,7 +898,7 @@
     }
     .experience h1
     {
-        
+        padding-top: 7%;
         font-size: 2.3em;
         font-weight: 700;
     }
@@ -915,7 +939,7 @@
     }
     .formation .formation1 .sacs img
     {
-        width: 10%;
+        width: 12%;
     }
     .formation .formation1 h2
     {
@@ -1092,7 +1116,7 @@
     }
     .formation .formation1 .sacs img
     {
-        width: 11%;
+        width: 13%;
     }
     .contact .contact_block form label
     {
@@ -1277,6 +1301,14 @@
         font-size: 1em;
         margin-right: 2%;
     }
+    .formation .encadrement .formation1 .sacs img
+    {
+        width: 18%;
+    }
+    .experience .sacs img
+    {
+        width: 13%;
+    }
     .projet .grid
     {
         grid-template-columns: repeat(1, 1fr);
@@ -1322,6 +1354,14 @@
     .contact-boite .contact-liens h2 
     {
     font-size: 1.8em;
+    }
+    .formation .encadrement .formation1 .sacs img
+    {
+        width: 18%;
+    }
+    .experience .sacs img
+    {
+        width: 15%;
     }
   }
   
